# yorm-web-app

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  SECURITY.md  foundation1b-clippy.txt  foundation2a-test.txt  foundation2b-clippy.txt  foundation2c-clippy.txt  foundation3a-tsc.txt  foundation3a-validation.txt  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/scripts/: foundation2c_integrate.py  foundation3a_cors_fix.py  foundation3a_integrate.py
.github/workflows/: apply-foundation1-lockfmt.yml  apply-foundation1b-format.yml  apply-foundation1b-lockfmt.yml  apply-pnpm-lock.yml  apply-rustfmt.yml  capture-foundation1b-clippy.yml  ci.yml  fix-foundation1b-clippy.yml  foundation-2c-diagnostic.yml  foundation-2c-integrate.yml  foundation-3a-diagnostic.yml  foundation-3a-integrate.yml  foundation2b-diagnose.yml  foundation2b-format.yml  foundation3a-connectivity-fix.yml
apps/admin/: README.md
apps/api/: Cargo.toml
apps/api/migrations/: 0001_identity_sandbox.sql  0002_wallet_ledger_sandbox.sql  0003_sandbox_p2p_transfers.sql
apps/api/src/: cors.rs  error.rs  lib.rs  main.rs  model.rs  store.rs
apps/api/src/store/: activity.rs  ledger.rs  postgres.rs
apps/api/tests/: activity_receipts.rs  cors.rs  p2p_transfers.rs  postgres_persistence.rs  wallet_creation_debug.rs  wallet_ledger.rs
apps/mobile/: .env.example  README.md  app.json  package.json  tsconfig.json
apps/mobile/app/: +not-found.tsx  _layout.tsx  index.tsx  sandbox-access.tsx
apps/mobile/app/(app)/: _layout.tsx  activity.tsx  index.tsx
apps/mobile/app/receipt/: [transactionId].tsx
apps/mobile/src/: config.test.ts  config.ts  format.test.ts  format.ts  theme.ts  ui.tsx
apps/mobile/src/api/: client.test.ts  client.ts
apps/mobile/src/session/: SessionProvider.tsx  state.test.ts  state.ts  storage.ts
apps/web/: README.md
apps/worker/: README.md
docs/architecture/: 0003-foundation-1b-postgres-identity.md  0004-foundation-2a-wallet-ledger.md  0005-foundation-2b-p2p-transfers.md  0006-foundation-2c-activity-receipts.md  0007-foundation-3a-mobile-shell.md  foundation-0.md
docs/security/: identity-sandbox-v1.md
infra/docker/: compose.yml
scripts/: apply_foundation2a_patch.py  test-activity-receipts-sandbox.ps1  test-identity-sandbox.ps1  test-p2p-transfer-sandbox.ps1  test-postgres-identity-persistence.ps1  test-wallet-ledger-sandbox.ps1
