[workspace]
members = ["apps/api"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "UNLICENSED"
publish = false
version = "0.0.0"

[workspace.dependencies]
axum = "0.8"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
