[workspace]
members = ["apps/api"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "UNLICENSED"
publish = false
version = "0.0.0"

[workspace.dependencies]
argon2 = "0.5"
axum = "0.8"
base64 = "0.22"
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["serde", "v4"] }
