[package]
name = "yorm-api"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
axum.workspace = true
serde.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
