[package]
name = "yorm-api"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
argon2.workspace = true
axum.workspace = true
base64.workspace = true
rand_core.workspace = true
serde.workspace = true
sha2.workspace = true
sqlx.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
serde_json.workspace = true
tower.workspace = true
